# FreeGrid-Android

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts
.github/workflows/: build-windows.yml
android/app/: build.gradle
functions/updater/: [[path]].js
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: Assets.svelte  Check.svelte  Dashboard.svelte  History.svelte  Sidebar.svelte  achievements.svelte.ts  achievements.ts  annual.ts  appearance.ts  backup-full.test.ts  backup-full.ts  badge-share.ts  categoryColors.ts  demo.ts  derive.ts  fq-share.ts  fq-test.ts  freedom-math.test.ts  freedom-math.ts  ime.ts  import-adapters.ts  level.svelte.ts  level.test.ts  level.ts  models.ts  native-mirror.ts  overlay.ts  quickadd.svelte.ts  settings.svelte.ts  sim-demo.ts  sim-finance.test.ts  sim-finance.ts  sim-life.test.ts  sim-life.ts  sim-spend.test.ts  sim-spend.ts  store.svelte.ts  updater.svelte.ts  widget.ts
src/lib/ai/: config.svelte.ts  llm.ts  prompts.ts  providers.ts
src/lib/components/: AiSettings.svelte  BadgeToast.svelte  BadgeWall.svelte  BarChart.svelte  CalendarPicker.svelte  CatPicker.svelte  CatSelect.svelte  DataTools.svelte  DonutChart.svelte  FqEmblem.svelte  FqTest.svelte  FreedomGrid.svelte  FreedomImpact.svelte  LevelCard.svelte  LevelUpToast.svelte  LifeSimSheet.svelte  Settings.svelte  Sheet.svelte  (+7 more)
tools/: gen-demo-backup.mjs  gen-wavy.mjs
(+13 files in other folders)
